--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "react": "18.2.0",
     "react-native": "0.73.0",
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.20",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.30.0",
     "react-native-video": "^6.0.0",
     "react-native-document-picker": "^8.2.1",
     "react-native-fs": "^2.20.0",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^10.0.3",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
@@ -29,6 +31,7 @@
     "@types/react": "^18.0.28",
     "@types/react-native": "0.73.5",
     "@types/react-native-fs": "^2.16.4",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.2.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
